Ommited rate filed in appointment page

--- a/CleanGuruApp/CleanGuruApp/Views/Appointment/CreateAppointment.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Appointment/CreateAppointment.cshtml
@@ -82,10 +82,10 @@
         </div>
     </div>
 
-    <div class="form-group">
+    @*<div class="form-group">
         <label asp-for="CleanerRate" id="RateLab">Rate for test - Delete later</label>
         <input asp-for="CleanerRate" id="RateInp" class="form-control" />
-    </div>
+    </div>*@
 
     <button asp-controller="Appointment" asp-action="CreateAppointment"
             class="btn btn-outline-success my-2 my-sm-0" type="submit">
