ServiceList (Details and Cancel button)
Created the details and Cancel button and the logi to delete the appointment without CustomerSubscription

--- a/CleanGuruApp/CleanGuruApp/Views/Appointment/Details.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Appointment/Details.cshtml
@@ -1,41 +1,16 @@
-﻿@model Appointment
+﻿
+@model Appointment
 
 @{
     ViewData["Title"] = "Details";
 }
 
-<h2>Details</h2>
-
-<div>
-    <h4>Service</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.IdAppointment)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Cleaner.FCleanerName)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ServicePrice.ServicePriceDescr)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CtDateRequestService)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.StartTime)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CtHoursRequested)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ServicePrice.CtAmountHour)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.IsSubscription)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="FutureAppointment">Back to List</a>
-</div>
+@if (Model == null)
+{
+    <h2>No such appointment</h2>
+}
+else
+{
+    <partial name="ServiceDetail" />
+    <a asp-action="ServiceList" class="btn btn-primary">Back to List</a>
+}
