--- a/CleanGuruApp/CleanGuruApp/Views/Appointment/FutureAppointment.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Appointment/FutureAppointment.cshtml
@@ -2,7 +2,7 @@
 
 
 @{
-    ViewData["Title"] = "ServiceList";
+    ViewData["Title"] = "FutureAppointment";
 }
 
 <h2>Future Services</h2>
@@ -11,9 +11,6 @@
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.IdAppointment)
-            </th>
             <th>
                 @Html.DisplayNameFor(model => model.CtDateRequestService)
             </th>
@@ -41,9 +38,6 @@
 {
         <tr>
             <td>
-                @Html.DisplayFor(model => item.IdAppointment)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.CtDateRequestService)
             </td>
             <td>
@@ -63,12 +57,12 @@
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.IdAppointment">Edit</a> |
-                <a asp-action="Details" asp-controller="Appointment" asp-route-id="@item.IdAppointment">Details</a> |
-                <a asp-action="Delete" asp-controller="Appointment" asp-route-id="@item.IdAppointment">Cancel</a>
+        <a asp-action="Details" asp-route-id="@item.IdAppointment">Details</a> |
+        <a asp-action="Delete" asp-route-id="@item.IdAppointment">Cancel</a>
 
                 @*<a asp-controller="Appointment" asp-action="Edit" >Edit</a> |
-            <a asp-controller="Appointment" asp-action="Details">Details</a> |
-            <a asp-controller="Appointment" asp-action="Delete">Cancel</a>*@
+                <a asp-controller="Appointment" asp-action="Details">Details</a> |
+                <a asp-controller="Appointment" asp-action="Delete">Cancel</a>*@
             </td>
         </tr>
 }
