--- a/CleanGuruApp/CleanGuruApp/Views/Shared/_Layout.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                         <a class="nav-link " asp-controller="Appointment" asp-action="CreateAppointment" tabindex="-1">Service</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link " asp-controller="Appointment" asp-action="ServiceList" tabindex="-1">Future Services</a>
+                        <a class="nav-link " asp-controller="Appointment" asp-action="FutureAppointment" tabindex="-1">Future Services</a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link " asp-controller="Home" asp-action="Contact" tabindex="-1">Contact</a>
