Edit and Cancel button
Correcting problem with the merge.

--- a/CleanGuruApp/CleanGuruApp/Views/Appointment/Delete.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Appointment/Delete.cshtml
@@ -19,7 +19,7 @@ else
             <partial name="ServiceDetail" />
             <input type="hidden" asp-for="IdAppointment" />
             <input type="submit" value="Cancel" class="btn btn-primary" />
-            <a asp-action="ServiceList" class="btn btn-primary">Back to List</a>
+            <a asp-action="FutureAppointment" class="btn btn-primary">Back to List</a>
         </form>
     </div>
 }
