--- a/CleanGuruApp/CleanGuruApp/Views/Appointment/Details.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Appointment/Details.cshtml
@@ -12,5 +12,5 @@
 else
 {
     <partial name="ServiceDetail" />
-    <a asp-action="ServiceList" class="btn btn-primary">Back to List</a>
+    <a asp-action="FutureAppointment" class="btn btn-primary">Back to List</a>
 }
