Adjusting View Name
Adjusting View Name from ServiceDetail to AppointmentDetail

--- a/CleanGuruApp/CleanGuruApp/Views/Appointment/Details.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Appointment/Details.cshtml
@@ -11,6 +11,6 @@
 }
 else
 {
-    <partial name="ServiceDetail" />
+    <partial name="AppointmentDetail" />
     <a asp-action="FutureAppointment" class="btn btn-primary">Back to List</a>
 }
