--- a/CleanGuruApp/CleanGuruApp/Views/Appointment/Delete.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Appointment/Delete.cshtml
@@ -16,7 +16,7 @@ else
     <br />
     <div>
         <form asp-action="Delete">
-            <partial name="ServiceDetail" />
+            <partial name="AppointmentDetail" />
             <input type="hidden" asp-for="IdAppointment" />
             <input type="submit" value="Cancel" class="btn btn-primary" />
             <a asp-action="FutureAppointment" class="btn btn-primary">Back to List</a>
