Created partial view for Create and Edit Appointment
Created partial view for Create and Edit Appointment

--- a/CleanGuruApp/CleanGuruApp/Views/Appointment/Delete.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Appointment/Delete.cshtml
@@ -18,7 +18,7 @@ else
         <form asp-action="Delete">
             <partial name="AppointmentDetail" />
             <input type="hidden" asp-for="IdAppointment" />
-            <input type="submit" value="Cancel" class="btn btn-primary" />
+            <input type="submit" value="Delete" class="btn btn-primary" />
             <a asp-action="FutureAppointment" class="btn btn-primary">Back to List</a>
         </form>
     </div>
