--- a/CleanGuruApp/CleanGuruApp/Views/Appointment/FutureAppointment.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Appointment/FutureAppointment.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "FutureAppointment";
 }
 
-<h2>Future Services</h2>
+<h2>Future Appointments</h2>
 
 
 <table class="table">
@@ -28,7 +28,7 @@
             </th>
 
             <th>
-                @Html.DisplayNameFor(model => model.IdServicePrice)
+                @Html.DisplayNameFor(model => model.ServicePrice)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Customer)
@@ -48,6 +48,7 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Cleaner.FCleanerName)
+                @Html.DisplayFor(modelItem => item.Cleaner.LCleanerName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.StartTime)
@@ -56,19 +57,19 @@
                 @Html.DisplayFor(modelItem => item.CtHoursRequested)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.IdServicePrice)
+                @Html.DisplayFor(modelItem => item.ServicePrice.ServicePriceDescr)
+               (@Html.DisplayFor(modelItem => item.ServicePrice.CtAmountHour) per hour)            
+
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.IdCustomer)
+                @Html.DisplayFor(modelItem => item.Customer.FCustomerName)
+                @Html.DisplayFor(modelItem => item.Customer.LCustomerName)
+
             </td>
             <td>
                 <a asp-action="Edit" asp-controller="Appointment" asp-route-id="@item.IdAppointment">Edit</a> |
                 <a asp-action="Details" asp-controller="Appointment" asp-route-id="@item.IdAppointment">Details</a> |
                 <a asp-action="Delete" asp-controller="Appointment" asp-route-id="@item.IdAppointment">Delete</a>
-
-                @*<a asp-controller="Appointment" asp-action="Edit" >Edit</a> |
-            <a asp-controller="Appointment" asp-action="Details">Details</a> |
-            <a asp-controller="Appointment" asp-action="Delete">Cancel</a>*@
             </td>
         </tr>
 }
