--- a/CleanGuruApp/CleanGuruApp/Views/Appointment/Details.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Appointment/Details.cshtml
@@ -11,6 +11,8 @@
 }
 else
 {
+    <div align="right">
+        <a asp-action="FutureAppointment" asp-controller="Appointment" class="warning" a>Back to List</a>
+    </div>
     <partial name="AppointmentDetail" />
-    <a asp-action="FutureAppointment" class="btn btn-primary">Back to List</a>
 }
