--- a/CleanGuruApp/CleanGuruApp/Views/Appointment/Delete.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Appointment/Delete.cshtml
@@ -12,14 +12,16 @@
 else
 {
 
-    <h3 class="warning">Are you sure you want to cancel this service ?</h3>
+    <h3 class="warning">Are you sure you want to delete this appointment ?</h3>
+    <div align="right">
+        <a asp-action="FutureAppointment" asp-controller="Appointment" class="warning" a>Back to List</a>
+    </div>
     <br />
     <div>
         <form asp-action="Delete">
             <partial name="AppointmentDetail" />
             <input type="hidden" asp-for="IdAppointment" />
             <input type="submit" value="Delete" class="btn btn-primary" />
-            <a asp-action="FutureAppointment" class="btn btn-primary">Back to List</a>
         </form>
     </div>
 }
