--- a/CleanGuruApp/CleanGuruApp/Views/Appointment/Edit.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Appointment/Edit.cshtml
@@ -22,8 +22,8 @@
     </div>
 
     <div class="form-group">
-        <label>Address</label>
-        <input class="form-control" />
+        <label asp-for="Customer" class="control-label">Address</label>
+        @Html.DropDownList("IdCustomer", ViewBag.AddressList as List<SelectListItem>, new { @class = "form-control" })
     </div>
 
     <div class="form-group">
@@ -65,7 +65,7 @@
                 <option value="8">8</option>
             </select>
         </div>
-    </div>   
+    </div>
     <button asp-controller="Appointment" asp-action="Edit"
             class="btn btn-outline-success my-2 my-sm-0" type="submit">
         Save
