--- a/CleanGuruApp/CleanGuruApp/Views/Shared/AppointmentDetail.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Shared/AppointmentDetail.cshtml
@@ -1,58 +1,59 @@
 ﻿@model Appointment
 
-    <div>
-        <h4>Service Detail</h4>
-        <hr />
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.IdAppointment)
-            </dt>
-            <dd>
-                @Html.DisplayFor(model => model.IdAppointment)
-            </dd>
-            <dt>
-                @Html.DisplayNameFor(model => model.IdCustomer)
-            </dt>
-            <dd>
-                @Html.DisplayFor(model => model.IdCustomer)
-            </dd>
-            <dt>
-                @Html.DisplayNameFor(model => model.CtDateRequestService)
-            </dt>
-            <dd>
-                @Html.DisplayFor(model => model.CtDateRequestService)
-            </dd>
-            <dt>
-                @Html.DisplayNameFor(model => model.CtHoursRequested)
-            </dt>
-            <dd>
-                @Html.DisplayFor(model => model.CtHoursRequested)
-            </dd>
-            <dt>
-                @Html.DisplayNameFor(model => model.StartTime)
-            </dt>
-            <dd>
-                @Html.DisplayFor(model => model.StartTime)
-            </dd>
-            <dt>
-                @Html.DisplayNameFor(model => model.IsSubscription)
-            </dt>
-            <dd>
-                @Html.DisplayFor(model => model.IsSubscription)
-            </dd>
-            <dt>
-                @Html.DisplayNameFor(model => model.IdServicePrice)
-            </dt>
-            <dd>
-                @Html.DisplayFor(model => model.IdServicePrice)
-            </dd>
-            <dt>
-                @Html.DisplayNameFor(model => model.IdCleaner)
-            </dt>
-            <dd>
-                @Html.DisplayFor(model => model.IdCleaner)
-            </dd>
-        </dl>
-        <br />
+<div>
+    <h4>Service Detail</h4>
+    <hr />
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.IdAppointment)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.IdAppointment)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.IdCustomer)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.IdCustomer)
+            @Html.DisplayFor(model => model.Customer.FCustomerName)
+        <dt>
+            @Html.DisplayNameFor(model => model.CtDateRequestService)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.CtDateRequestService)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.CtHoursRequested)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.CtHoursRequested)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.StartTime)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.StartTime)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.IsSubscription)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.IsSubscription)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.IdServicePrice)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.IdServicePrice)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.IdCleaner)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.IdCleaner)
+            @Html.DisplayFor(model => model.Cleaner.FCleanerName)
+        </dd>
+    </dl>
+    <br />
 </div>
 
