time default. create appointment

--- a/CleanGuruApp/CleanGuruApp/Views/Appointment/CreateAppointment.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Appointment/CreateAppointment.cshtml
@@ -45,7 +45,8 @@
     <div class="form-group">
         <label asp-for="StartTime">Start Time of Service</label>
         <div>
-            <input asp-for="StartTime" class="form-control" type="time"  id="example-time-input">
+            <input asp-for="StartTime" class="form-control" type="time"  
+                id="example-time-input" value="07:00">
         </div>
     </div>
 
