--- a/CleanGuruApp/CleanGuruApp/Views/Shared/CreateUser.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Shared/CreateUser.cshtml
@@ -4,14 +4,14 @@
     ViewData["Title"] = "CreateAppointment";
 }
 
-<h2>Create User</h2>
+<h2>Sign In</h2>
 
 
 <div asp-validation-summary="All" class="validation-summary-errors"></div>
 
 <form asp-controller="UserLogin" asp-action="Edit" method="post">
     <div class="form-group">
-        <label asp-for="UserName">User Name</label>
+        <label asp-for="UserName">Email</label>
         <input type="text" class="form-control" asp-for="UserName"/>
     </div>
     <div class="form-group">
@@ -19,22 +19,22 @@
         <input type="text" class="form-control" asp-for="Pin"/>
     </div>
 
-    <div>
-        <select asp-for="Role">          @*May not have asp-for="Role"*@
+    @*<div>
+        <select asp-for="Role">          
             <option value="CUSTOMER" asp-for="Role">Customer</option>
             <option value="CLEANER" asp-for="Role">Cleaner</option>
         </select>
-    </div>
+    </div>*@
 
-    <div>
+    @*<div>
         <a asp-controller="UserLogin" asp-action="List">List of User in SeedData</a>
-    </div>
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Create User</button>
+    </div>*@
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Sign In</button>
 
     @*<button class="btn btn-outline-success my-2 my-sm-0" type="submit" asp-controller="Appointment" asp-action="SaveAppontment">Create Appointment</button>*@
     <button class="btn btn-danger" asp-controller="Home" asp-action="Index">Cancel</button>
     <div>
-        <a asp-controller="Home" asp-action="Register">Don't have an account? Sign Up Free!!</a>
+        <a asp-controller="Customer" asp-action="Register">Don't have an account? Click here for customer registration!</a>
     </div>
   
 </form>
