--- a/CleanGuruApp/CleanGuruApp/wwwroot/css/styles.css
+++ b/CleanGuruApp/CleanGuruApp/wwwroot/css/styles.css
@@ -1,8 +1,9 @@
 ﻿
 #bg_index {
-    background-image:url(/images/bg_image.jpg); 
+    background-image:url(/images/bg_image.jpg);
     background-repeat:no-repeat; 
     background-size:cover;
+    background-position: center;
     
 }
 
