validations - registration page - email and password

--- a/CleanGuruApp/CleanGuruApp/Views/Home/Index.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
         <div class="col-md-5 p-lg-5 mx-auto my-5">
             <h1 class="display-4 font-weight-normal">CLEAN GURU</h1>
             <p class="lead font-weight-normal">Welcome to our home page</p>
-            <a class="btn btn-outline-secondary" href="#">Coming soon</a>
+            <a class="btn btn-outline-light" href="#">Coming soon</a>
         </div>
         <div class="product-device shadow-sm d-none d-md-block"></div>
         <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
