--- a/CleanGuruApp/CleanGuruApp/Views/Customer/Register.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Customer/Register.cshtml
@@ -25,22 +25,22 @@
 
     <div class="form-group">
         <label asp-for="CtPhone1">Phone Number</label>
-        <input type="text" class="form-control" asp-for="CtPhone1" />
+        <input type="number" class="form-control" asp-for="CtPhone1" />
     </div>
 
     <div class="form-group">
         <label asp-for="CtPhone2">Additional Phone Number (optional)</label>
-        <input type="text" class="form-control" asp-for="CtPhone2" />
+        <input type="number" class="form-control" asp-for="CtPhone2" />
     </div>
 
     <div class="form-group">
         <label asp-for="UserName">Email</label>
-        <input type="text" class="form-control" asp-for="UserName" />
+        <input type="email" class="form-control" asp-for="UserName" />
     </div>
 
     <div class="form-group">
             <label asp-for="Password">Password</label>
-            <input type="text" class="form-control" asp-for="Password" />
+            <input type="password" class="form-control" asp-for="Password" />
         </div>
 
     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Register</button>
