calculate cost of service

--- a/CleanGuruApp/CleanGuruApp/Views/ServicePrices/Index.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/ServicePrices/Index.cshtml
@@ -27,6 +27,9 @@
                     @Html.DisplayNameFor(model => model.ClAmountHour)
                 </th>
                 <th>
+                    @Html.DisplayNameFor(model => model.Total)
+                </th>
+                <th>
                     @Html.DisplayNameFor(model => model.ServicePriceStatus)
                 </th>
                 <th></th>
@@ -35,28 +38,31 @@
         <tbody>
             @foreach (var item in Model)
             {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.IdServicePrice)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.ServicePriceDescr)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.CtAmountHour)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.ClAmountHour)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.ServicePriceStatus)
-                    </td>
-                    <td>
-                        <a asp-action="Edit" asp-route-id="@item.IdServicePrice">Edit</a> |
-                        <a asp-action="Details" asp-route-id="@item.IdServicePrice">Details</a> |
-                        <a asp-action="Delete" asp-route-id="@item.IdServicePrice">Delete</a>
-                    </td>
-                </tr>
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.IdServicePrice)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ServicePriceDescr)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CtAmountHour)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ClAmountHour)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Total)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ServicePriceStatus)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.IdServicePrice">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.IdServicePrice">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.IdServicePrice">Delete</a>
+                </td>
+            </tr>
             }
         </tbody>
     </table>
