--- a/CleanGuruApp/CleanGuruApp/Views/Appointment/FutureAppointment.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Appointment/FutureAppointment.cshtml
@@ -31,6 +31,9 @@
                 @Html.DisplayNameFor(model => model.ServicePrice)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Total)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Customer)
             </th>
             <th></th>
@@ -58,7 +61,11 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ServicePrice.ServicePriceDescr)
-               (@Html.DisplayFor(modelItem => item.ServicePrice.CtAmountHour) per hour)            
+                (@Html.DisplayFor(modelItem => item.ServicePrice.CtAmountHour) per hour)
+
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Total) 
 
             </td>
             <td>
