fixed error in availability page

--- a/CleanGuruApp/CleanGuruApp/Views/ScheduleCleaners/Index.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/ScheduleCleaners/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<CleanGuruApp.Models.ScheduleCleaner>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Cleaner's Availability";
 }
 
 <h2>Index</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Create New Availability</a>
 </p>
 <table class="table">
     <thead>
