--- a/CleanGuruApp/CleanGuruApp/Views/ScheduleCleaners/Index.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/ScheduleCleaners/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Cleaner's Availability";
 }
 
-<h2>Index</h2>
+<h2>Cleaner's Availability</h2>
 
 <p>
     <a asp-action="Create">Create New Availability</a>
