--- a/CleanGuruApp/CleanGuruApp/Views/Shared/_Layout.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Shared/_Layout.cshtml
@@ -49,6 +49,12 @@
                     <li class="nav-item active">
                         <a class="nav-link " asp-controller="Customer" asp-action="Register" tabindex="-1">Customer Registration</a>
                     </li>
+                    <li class="nav-item active">
+                        <a class="nav-link " asp-controller="Cleaner" asp-action="Register" tabindex="-1">Cleaner Registration</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link " asp-controller="Cleaner" asp-action="ListOfCleaners" tabindex="-1">Registered Cleaners</a>
+                    </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
                     <button class="btn btn-outline-light my-2 my-sm-0 btn-lg" asp-controller="Home" asp-action="CreateUser" type="submit">Sign In</button>
