--- a/CleanGuruApp/CleanGuruApp/Views/Appointment/CreateAppointment.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Appointment/CreateAppointment.cshtml
@@ -20,10 +20,10 @@
         @Html.DropDownList("IdCustomer", ViewBag.CustList as List<SelectListItem>, new { @class = "form-control" })
     </div>
 
-    <div class="form-group">
+    @*<div class="form-group">
         <label asp-for="Customer" class="control-label">Address</label>
         @Html.DropDownList("IdCustomer", ViewBag.AddressList as List<SelectListItem>, new { @class = "form-control" })
-    </div>
+    </div>*@
     
     <div class="form-group">
         <label asp-for="Cleaner" class="control-label"></label>
