--- a/CleanGuruApp/CleanGuruApp/Views/Shared/_Layout.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent" style="font-size:16px">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" asp-controller="Home" asp-action="Index">Home1 <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" asp-controller="Home" asp-action="Index">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" asp-controller="Home" asp-action="AboutUs">About Us</a>
@@ -46,12 +46,26 @@
                     <li class="nav-item active">
                         <a class="nav-link " asp-controller="ServicePrices" asp-action="index" tabindex="-1">Cost Service</a>
                     </li>
+
+                    <div class="dropdown">
+                        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                            Registrations
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li class="nav-item active">
+                                <a class="nav-link " style="color: black" asp-controller="Customer" asp-action="Register" tabindex="-1">Customer </a>
+                            </li>
+                            <li class="nav-item active">
+                                <a class="nav-link " style="color: black;" asp-controller="Cleaner" asp-action="Register" tabindex="-1">Cleaner </a>
+                            </li>
+                        </ul>
+                    </div>
+
                     <li class="nav-item active">
-                        <a class="nav-link " asp-controller="Customer" asp-action="Register" tabindex="-1">Customer Registration</a>
+                        <a class="nav-link " asp-controller="Appointment" asp-action="CleanerAppointment" tabindex="-1">Cleaner Appointments</a>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link " asp-controller="Cleaner" asp-action="Register" tabindex="-1">Cleaner Registration</a>
-                    </li>
+
                     <li class="nav-item active">
                         <a class="nav-link " asp-controller="Cleaner" asp-action="ListOfCleaners" tabindex="-1">Registered Cleaners</a>
                     </li>
