--- a/CleanGuruApp/CleanGuruApp/Views/Cleaner/ListOfCleaners.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Cleaner/ListOfCleaners.cshtml
@@ -10,7 +10,7 @@
     <thead>
         <tr>
             <th>
-                Cleaner ID
+                Cleaner's ID
             </th>
             <th>
                 First Name
@@ -20,6 +20,9 @@
             </th>
             <th>
                 Sin Number
+            </th>
+            <th>
+                Phone
             </th>
         </tr>
     </thead>
@@ -38,6 +41,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ClSinNumber)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ClPhone1)
             </td>
         </tr>
         }
