--- a/CleanGuruApp/CleanGuruApp/Views/Customer/ListOfCustomers.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Customer/ListOfCustomers.cshtml
@@ -4,13 +4,13 @@
     ViewData["Title"] = "Registerd Customer";
 }
 
-<h2>List of Registered Cleaners</h2>
+<h2>List of Registered Customers</h2>
 
 <table class="table">
     <thead>
         <tr>
             <th>
-                Customer ID
+                Customer's ID
             </th>
             <th>
                 First Name
