Create the call to decline a service
Create call to decline a service through the CleanersAppointment View.

--- a/CleanGuruApp/CleanGuruApp/Views/Appointment/CleanerAppointment.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Appointment/CleanerAppointment.cshtml
@@ -78,9 +78,9 @@
                 </td>
                 <td>
                     @*<a href="#" class="button" onClick="stopwatch.start();">Start</a> |
-                        <a href="#" class="button" onClick="stopwatch.stop();">Stop</a> |*@
-                    <a asp-action="Details" asp-controller="Appointment" asp-route-id="@item.IdAppointment">Details</a>
-
+        <a href="#" class="button" onClick="stopwatch.stop();">Stop</a> |*@
+                    <a asp-action="Details" asp-controller="Appointment" asp-route-id="@item.IdAppointment">Details</a> |
+                    <a asp-action="Decline" asp-controller="Appointment" asp-route-id="@item.IdAppointment">Decline</a>
                 </td>
             </tr>
         }
