--- a/CleanGuruApp/CleanGuruApp/Views/Appointment/FutureAppointment.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Appointment/FutureAppointment.cshtml
@@ -5,7 +5,14 @@
     ViewData["Title"] = "FutureAppointment";
 }
 
-<h2>Future Appointments</h2>
+@if (ViewBag.typeUser == "Cu")
+{
+    <h2>Future Appointments for Customers</h2>
+}
+else
+{
+    <h2>Future Appointments for Cleaners</h2>
+}
 
 
 <table class="table">
@@ -27,12 +34,15 @@
                 @Html.DisplayNameFor(model => model.CtHoursRequested)
             </th>
 
-            <th>
-                @Html.DisplayNameFor(model => model.ServicePrice)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Total)
-            </th>
+            @if (ViewBag.typeUser == "Cu")
+            {
+                <th>
+                    @Html.DisplayNameFor(model => model.ServicePrice)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Total)
+                </th>
+            }
             <th>
                 @Html.DisplayNameFor(model => model.Customer)
             </th>
@@ -40,45 +50,51 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model)
-{
-        <tr>
-            <td>
-                @Html.DisplayFor(model => item.IdAppointment)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CtDateRequestService)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Cleaner.FCleanerName)
-                @Html.DisplayFor(modelItem => item.Cleaner.LCleanerName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StartTime)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CtHoursRequested)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ServicePrice.ServicePriceDescr)
-                (@Html.DisplayFor(modelItem => item.ServicePrice.CtAmountHour) per hour)
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(model => item.IdAppointment)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CtDateRequestService)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Cleaner.FCleanerName)
+                    @Html.DisplayFor(modelItem => item.Cleaner.LCleanerName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.StartTime)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CtHoursRequested)
+                </td>
+                @if (ViewBag.typeUser == "Cu")
+                {
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ServicePrice.ServicePriceDescr)
+                        (@Html.DisplayFor(modelItem => item.ServicePrice.CtAmountHour) per hour)
 
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Total) 
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Total)
 
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Customer.FCustomerName)
-                @Html.DisplayFor(modelItem => item.Customer.LCustomerName)
+                    </td>
+                }
+                <td>
+                    @Html.DisplayFor(modelItem => item.Customer.FCustomerName)
+                    @Html.DisplayFor(modelItem => item.Customer.LCustomerName)
 
-            </td>
-            <td>
-                <a asp-action="Edit" asp-controller="Appointment" asp-route-id="@item.IdAppointment">Edit</a> |
-                <a asp-action="Details" asp-controller="Appointment" asp-route-id="@item.IdAppointment">Details</a> |
-                <a asp-action="Delete" asp-controller="Appointment" asp-route-id="@item.IdAppointment">Delete</a>
-            </td>
-        </tr>
-}
+                </td>
+                @if (ViewBag.typeUser == "Cu")
+                {
+                    <td>
+                        <a asp-action="Edit" asp-controller="Appointment" asp-route-id="@item.IdAppointment">Edit</a> |
+                        <a asp-action="Details" asp-controller="Appointment" asp-route-id="@item.IdAppointment">Details</a> |
+                        <a asp-action="Delete" asp-controller="Appointment" asp-route-id="@item.IdAppointment">Delete</a>
+                    </td>
+                }
+            </tr>
+        }
     </tbody>
 </table>
