--- a/CleanGuruApp/CleanGuruApp/Views/Appointment/CleanerAppointment.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Appointment/CleanerAppointment.cshtml
@@ -80,7 +80,7 @@
                     @*<a href="#" class="button" onClick="stopwatch.start();">Start</a> |
         <a href="#" class="button" onClick="stopwatch.stop();">Stop</a> |*@
                     <a asp-action="Details" asp-controller="Appointment" asp-route-id="@item.IdAppointment">Details</a> |
-                    <a asp-action="Decline" asp-controller="Appointment" asp-route-id="@item.IdAppointment">Decline</a>
+                    <a asp-action="Decline" asp-controller="Appointment" asp-route-id="@item.IdAppointment">Accept/Decline</a>
                 </td>
             </tr>
         }
