--- a/CleanGuruApp/CleanGuruApp/Views/Customer/Register.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Customer/Register.cshtml
@@ -1,10 +1,15 @@
 ﻿@model Customer
-  
+
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Register as Cuatomer";
 }
 
-<h2>  Registration  </h2>
+<h2 style="margin-bottom:30px;">  Registration for Customer </h2>
+<h5 style="margin-bottom:30px;">
+    <a asp-controller="Cleaner" asp-action="Register" tabindex="-1">Register as Cleaner? Clicke here </a>
+
+</h5>
+
 <div asp-validation-summary="All" class="validation-summary-errors"></div>
 <form class="form defaultForm" style="width:80%" asp-action="Register" asp-controller="Customer" method="post">
 
@@ -39,9 +44,9 @@
     </div>
 
     <div class="form-group">
-            <label asp-for="Password">Password</label>
-            <input type="password" class="form-control" asp-for="Password" />
-        </div>
+        <label asp-for="Password">Password</label>
+        <input type="password" class="form-control" asp-for="Password" />
+    </div>
 
     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Register</button>
     <button class="btn btn-danger" asp-controller="Home" asp-action="Index">Cancel</button>
