--- a/CleanGuruApp/CleanGuruApp/Views/Shared/_Layout.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
 <body>
     <div class="alpageMargin">
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="background-color:#0099ff;">
-            <a class="navbar-brand" href="#" style="margin:10px">CleanGuru</a>
+            <a class="navbar-brand"asp-controller="Home" asp-action="Index" style="margin:10px">CleanGuru</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -28,26 +28,20 @@
                     <li class="nav-item active">
                         <a class="nav-link" asp-controller="Home" asp-action="Index">Home <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" asp-controller="Home" asp-action="AboutUs">About Us</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link " asp-controller="Appointment" asp-action="CreateAppointment" tabindex="-1">Service</a>
-                    </li>
+                    
+
                     <li class="nav-item active">
                         <div class="dropdown">
                             <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                                Future Appointments
+                                Service
                                 <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu">
                                 <li class="nav-item active">
-                                    <a class="nav-link " style="color: black" asp-controller="Appointment" asp-action="FutureAppointment" 
-                                            asp-route-typeUser="Cu" tabindex="-1">Customer </a>
+                                    <a class="nav-link " style="color: black" asp-controller="ServicePrices" asp-action="index" tabindex="-1">Cost Service</a>
                                 </li>
                                 <li class="nav-item active">
-                                    <a class="nav-link " style="color: black;" asp-controller="Appointment" asp-action="FutureAppointment"
-                                            asp-route--typeUser="Cl" tabindex="-1">Cleaner </a>
+                                    <a class="nav-link " style="color: black" asp-controller="Appointment" asp-action="CreateAppointment" tabindex="-1">Service</a>
                                 </li>
                             </ul>
                         </div>
@@ -55,43 +49,68 @@
                         @*<a class="nav-link " asp-controller="Appointment" asp-action="FutureAppointment" tabindex="-1">Future Appointments</a>*@
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link " asp-controller="Home" asp-action="Contact" tabindex="-1">Contact</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link " asp-controller="ScheduleCleaners" asp-action="index" tabindex="-1">Schedule</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link " asp-controller="ServicePrices" asp-action="index" tabindex="-1">Cost Service</a>
-                    </li>
+                        <div class="dropdown">
+                            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                                Customer
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li class="nav-item active">
+                                    <a class="nav-link " style="color: black" asp-controller="Appointment" asp-action="FutureAppointment"
+                                       asp-route-typeUser="Cu" tabindex="-1">Future Appointments</a>
+                                </li>
+                            </ul>
+                        </div>
 
-                    <div class="dropdown">
-                        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                            Registrations
-                            <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li class="nav-item active">
-                                <a class="nav-link " style="color: black" asp-controller="Customer" asp-action="Register" tabindex="-1">Customer </a>
-                            </li>
-                            <li class="nav-item active">
-                                <a class="nav-link " style="color: black;" asp-controller="Cleaner" asp-action="Register" tabindex="-1">Cleaner </a>
-                            </li>
-                        </ul>
-                    </div>
+                        @*<a class="nav-link " asp-controller="Appointment" asp-action="FutureAppointment" tabindex="-1">Future Appointments</a>*@
+                    </li>
+                    <li class="nav-item active">
+                        <div class="dropdown">
+                            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                                Cleaner
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li class="nav-item active">
+                                    <a class="nav-link " style="color: black;" asp-controller="Appointment" asp-action="CleanerAppointment" tabindex="-1">Cleaner Appointments</a>
+                                </li>
+                                <li class="nav-item active">
+                                    <a class="nav-link " style="color: black;" asp-controller="Appointment" asp-action="FutureAppointment"
+                                       asp-route--typeUser="Cl" tabindex="-1">Future Appointments</a>
+                                </li>
+                                <li class="nav-item active">
+                                    <a class="nav-link " style="color: black;" asp-controller="ScheduleCleaners" asp-action="index" tabindex="-1">Cleaner's Availability</a>
+                                </li>
+                            </ul>
+                        </div>
 
-                    <li class="nav-item active">
-                        <a class="nav-link " asp-controller="Appointment" asp-action="CleanerAppointment" tabindex="-1">Cleaner Appointments</a>
+                        @*<a class="nav-link " asp-controller="Appointment" asp-action="FutureAppointment" tabindex="-1">Future Appointments</a>*@
                     </li>
+                    <li class="nav-item active">
+                        <div class="dropdown">
+                            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                                Manager
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li class="nav-item active">
+                                    <a class="nav-link " style="color: black;" asp-controller="Customer" asp-action="ListOfCustomers" tabindex="-1">Registered Customers</a>
+                     
+                                </li>
+                                <li class="nav-item active">
 
-                    <li class="nav-item active">
-                        <a class="nav-link " asp-controller="Customer" asp-action="ListOfCustomers" tabindex="-1">Registered Customers</a>
+                                    <a class="nav-link "style="color: black;"  asp-controller="Cleaner" asp-action="ListOfCleaners" tabindex="-1">Registered Cleaners</a>
+                                </li>
+                               
+                            </ul>
+                        </div>
+
+                        @*<a class="nav-link " asp-controller="Appointment" asp-action="FutureAppointment" tabindex="-1">Future Appointments</a>*@
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link " asp-controller="Cleaner" asp-action="ListOfCleaners" tabindex="-1">Registered Cleaners</a>
-                    </li>
+                    
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
-                    <button class="btn btn-outline-light my-2 my-sm-0 btn-lg" asp-controller="Home" asp-action="CreateUser" type="submit">Sign In</button>
+                    <button class="btn btn-outline-light my-2 my-sm-0 btn-lg" asp-controller="Customer" asp-action="Register" type="submit">Register</button>
                 </form>
 
             </div>
