Documenting the code
Documenting the code

--- a/CleanGuruApp/CleanGuruApp/Views/Appointment/Edit.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Appointment/Edit.cshtml
@@ -1,10 +1,8 @@
-﻿@*CONSIDER: Could be using a Partial view for the for letting just the buttons here. The Partial view (List) could be used to create a new or editing*@
-
-@model Appointment
-
+﻿@model Appointment
 @{
     ViewData["Title"] = "Edit";
 }
+
 <script src="~/javascript/Service.js"></script>
 
 <h2>Edit Appointment</h2>
