--- a/CleanGuruApp/CleanGuruApp/Views/Appointment/CreateAppointment.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Appointment/CreateAppointment.cshtml
@@ -1,10 +1,8 @@
-﻿@*CONSIDER: Could be using a Partial view for the for letting just the buttons here. The Partial view (List) could be used to create a new or editing*@
-
-@model Appointment
-
+﻿@model Appointment
 @{
     ViewData["Title"] = "CreateAppointment";
 }
+
 <script src="~/javascript/Service.js"></script>
 <h2>Create Appointment</h2>
 
@@ -16,18 +14,11 @@
     <div class="form-group">
         <label asp-for="Customer" class="control-label"></label>
         @Html.DropDownList("IdCustomer", ViewBag.CustList as List<SelectListItem>, new { @class = "form-control" })
-    </div>
-
-    @*<div class="form-group">
-        <label asp-for="Customer" class="control-label">Address</label>
-        @Html.DropDownList("IdCustomer", ViewBag.AddressList as List<SelectListItem>, new { @class = "form-control" })
-    </div>*@
-    
+    </div>    
     <div class="form-group">
         <label asp-for="Cleaner" class="control-label"></label>
         @Html.DropDownList("IdCleaner", ViewBag.CLeanList as List<SelectListItem>, new { @class = "form-control" })
     </div>
-
     <div class="form-group">
         <label asp-for="ServicePrice">Service</label>
         @Html.DropDownList("IdServicePrice", ViewBag.ServiceList as List<SelectListItem>, new { @class = "form-control" })
